src/ui/snapshots/sloth__ui__tests__branches_tab_all_filter.snap
---
source: src/ui/tests.rs
expression: "render(&mut state, 120, 14)"
---
"🦥 sloth v0.2.0  /work · 3 repos · .git 168.0 MB · 1.5 GB reclaimable · 3 cleanable branches                   [Default]" Hidden by multi-width symbols: [(1, " ")]
" 1 Repos │ 2 Branches │ 3 Queue │ 4 Dashboard                                                                           "
"┌ Branches 6 · showing all (f) ────────────────────────────────────────────────────────────────────────────────────────┐"
"│    Repository               Branch                                Status                   Age  ↑↓        Diff       │"
"│[ ] api                      feat/login                            stale merged gone         3mo    ↑0 ↓12            │"
"│[ ] api                      fix/typo                              stale squashed local      6mo    ↑2 ↓30            │"
"│[-] api                      main                                  default                    1d                      │"
"│[ ] api                      wip/cache                             local ⚠                    2d     ↑3 ↓0     +120 -4│"
"│[ ] web                      chore/deps                            stale merged local         1y     ↑0 ↓0            │"
"│[-] web                      main                                  default local              3d                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Space select  a select cleanable  f filter  s sort  / search  Enter open repo  x run queue                             "
