src/ui/snapshots/sloth__ui__tests__confirmation_lists_the_queue_with_warnings.snap
---
source: src/ui/tests.rs
assertion_line: 214
expression: "render(&mut state, 100, 24)"
---
"sloth v0.2.1  /work · 3 repos · .git 168.0 MB · 1.5 GB reclaimable · 3 cleanable branches  [Default]"
" 1 Repos │ 2 Branches │ 3 Queue (4) │ 4 Dashboard                                                   "
"┌ Branches 6 · showing all (f) ────────────────────────────────────────────────────────────────────┐"
"│    Repository          Branch                      Status              Age  ↑↓        Diff       │"
"│[x] api       ┌ Confirm ───────────────────────────────────────────────────────────┐12            │"
"│[x] api       │Delete 4 branches in 2 repos                                        │30            │"
"│[-] api       │                                                                    │              │"
"│[x] api       │                                                                    │↓0     +120 -4│"
"│[x] web       │api                                                                 │↓0            │"
"│[-] web       │  delete branch feat/login                                          │              │"
"│              │  delete branch fix/typo                                            │              │"
"│              │  delete branch wip/cache  ! unmerged, unpushed commits             │              │"
"│              │web                                                                 │              │"
"│              │  delete branch chore/deps                                          │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │y confirm   n / Esc cancel                                          │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" x clean (4)  q quit │ Space select  a select cleanable  f filter  s  4 branches added to the queue "
