src/ui/snapshots/sloth__ui__tests__dashboard_tab.snap
---
source: src/ui/tests.rs
expression: "render(&mut state, 100, 20)"
---
"🦥 sloth v0.1.0  /work · 3 repos · .git 168.0 MB · 1.5 GB reclaimable · 3 cleanable branche[Default]" Hidden by multi-width symbols: [(1, " ")]
" 1 Repos │ 2 Dashboard                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌ Global Dashboard ────────────────────────────────────────────────────────────────────────────────┐"
"│                                          Sloth Analytics                                         │"
"│                                                                                                  │"
"│                                       Total Repositories: 3                                      │"
"│                                   Total Size on Disk: 168.0 MB                                   │"
"│                                                                                                  │"
"│                                      Branches: 6 (3 merged)                                      │"
"│                                            Stashes: 1                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
" 1 repos  ? help  q quit                                                                            "
