src/ui/snapshots/sloth__ui__tests__diff_modal.snap
---
source: src/ui/tests.rs
expression: "render(&mut state, 100, 14)"
---
"sloth v0.2.0  /work · 3 repos · .git 168.0 MB · 1.5 GB reclaimable · 3 cleanable branches  [Default]"
" 1 Repos │┌ Diff (1/2 lines — Up/Down/PgUp/PgDn/Home, Esc/v to close) ───────────────────┐          "
"┌ Reposito│diff --git a/login.rs b/login.rs                                              │─────────┐"
"│    Repo │+fn login() {}                                                                │(2 days a│"
"│[ ] api  │                                                                              │         │"
"└─────────│                                                                              │         │"
"┌ api · gi│                                                                              │         │"
"│    Name │                                                                              │         │"
"│[-] main │                                                                              │         │"
"│[ ] feat/│                                                                              │         │"
"│[ ] wip/c│                                                                              │         │"
"│[ ] fix/t│                                                                              │         │"
"└─────────└──────────────────────────────────────────────────────────────────────────────┘─────────┘"
" x clean  q quit │ Space select  a smart  v diff  ← back  ? help                                    "
