src/ui/snapshots/sloth__ui__tests__empty_queue_explains_how_to_fill_it.snap
---
source: src/ui/tests.rs
assertion_line: 225
expression: "render(&mut state, 100, 12)"
---
"sloth vX.Y.Z  /work · 3 repos · .git 168.0 MB · 1.5 GB reclaimable · 3 cleanable branches  [Default]"
" 1 Repos │ 2 Branches │ 3 Queue │ 4 Dashboard                                                       "
"┌ Cleanup queue ───────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                        The queue is empty.                                       │"
"│                                                                                                  │"
"│          Select branches, stashes or worktrees with Space in the Repos or Branches tab,          │"
"│                         or press `a` to add every merged or gone branch.                         │"
"│                                                                                                  │"
"│                                                                                                  │"
"└ Enter/x run all  Space/d remove  C clear ────────────────────────────────────────────────────────┘"
" x clean  q quit │ Space remove  Enter run  C clear  ? help                                         "
