src/ui/snapshots/sloth__ui__tests__graph_pane.snap
---
source: src/ui/tests.rs
assertion_line: 350
expression: "render(&mut state, 120, 20)"
---
"sloth v0.2.1  /work · 3 repos · .git 168.0 MB · 1.5 GB reclaimable · 3 cleanable branches                      [Default]"
" 1 Repos │ 2 Branches │ 3 Queue │ 4 Dashboard                                                                           "
"┌ Repositories 3/3 ──────────────────────────────────┐┌Git Graph───────────────────────────────────────────────────────┐"
"│    Repository    Branch       Cln .git     Reclaim ││● abc1234 - (HEAD -> main) merge feat/login (2 days ago) <dev>  │"
"│[ ] api           main ●         2  48.0 MB 310.0 MB│││╲                                                              │"
"│[ ] docs          main           ·                  │││ ● def5678 - login form (3 weeks ago) <dev>                    │"
"│[ ] web           main           1 120.0 MB   1.2 GB│││╱                                                              │"
"│                                                    ││● 0123abc - init (1 year ago) <dev>                             │"
"└────────────────────────────────────────────────────┘│                                                                │"
"┌ api · github.com/acme/api ─────────────────────────┐│                                                                │"
"│    Name         Status   Age  ↑↓        Diff       ││                                                                │"
"│[-] main         default    1d                      ││                                                                │"
"│[ ] feat/login   stale me  3mo    ↑0 ↓12            ││                                                                │"
"│[ ] wip/cache    local !    2d     ↑3 ↓0     +120 -4││                                                                │"
"│[ ] fix/typo     stale sq  6mo    ↑2 ↓30            ││                                                                │"
"│[ ] stash WIP on           40d                      ││                                                                │"
"│[-] worktree api main                               ││                                                                │"
"│[ ] worktree api dirty                       12.0 MB││                                                                │"
"└────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────┘"
" x clean  q quit │ Space mark  → details  a smart select  p/c/X prune/gc/deep clean  / filter  s sort  ? help           "
