src/ui/snapshots/sloth__ui__tests__help_overlay.snap
---
source: src/ui/tests.rs
expression: "render(&mut state, 120, 40)"
---
"🦥 sloth v0.2.0  /work · 3 repos · .git 168.0 MB · 1.5 GB reclaimable · 3 cleanable branches                   [Default]" Hidden by multi-width symbols: [(1, " ")]
" 1 Repos │ 2 Branches │ 3 Queue │ 4 Dashboard                                                                           "
"┌ Repo┌ Keys — ? or Esc to close ────────────────────────────────────────────────────────────────────────────────┐─────┐"
"│    R│Global                                               Graph                                                │     │"
"│[ ] a│  1-9 / Tab   switch tab                               ↑↓←→        scroll                                 │     │"
"│[ ] d│  ?           toggle this help                         f           fullscreen                             │     │"
"│[ ] w│  x / Enter   review & run the cleanup queue           Esc / g     back                                   │20 -4│"
"│     │  C           clear the queue                                                                             │     │"
"│     │  r           refresh the marked (or focused)        Branches (all repositories)                          │     │"
"│     │repositories                                           ↑↓ PgUp/Dn  move                                   │     │"
"│     │  R           rescan the directory                     Space       add to / remove from queue             │.0 MB│"
"│     │  t           cycle theme                              a           add every listed cleanable branch      │     │"
"│     │  u           install available update                 A           add every listed unprotected branch    │     │"
"│     │  q           quit                                     f           cycle filter: cleanable, merged, gone, │     │"
"│     │                                                     stale, unmerged, all                                 │     │"
"│     │Repositories                                           s           cycle sort: repository, oldest, name   │     │"
"│     │  ↑↓ PgUp/Dn  move                                     /           search repository or branch            │     │"
"│     │  Space       mark repository (targets of a/p/c/X)     v           view diff                              │     │"
"│     │  → / Enter   open details                             Enter       open the branch in its repository      │     │"
"│     │  a           smart-select merged & gone branches                                                         │     │"
"│     │  p           prune remote-tracking branches         Queue                                                │     │"
"│     │  c           garbage collect                          ↑↓          move                                   │     │"
"│     │  X           deep clean untracked & ignored files     Space / d   remove from the queue                  │     │"
"│     │  /           filter by path or remote                 Enter / x   review & run everything                │     │"
"│     │  s           cycle sort (name, cleanable,             C           clear the queue                        │     │"
"│     │reclaimable, .git)                                                                                        │     │"
"│     │  Esc         clear filter, then marks               Dashboard                                            │     │"
"│     │  g           toggle graph                             a           queue every merged & gone branch of    │     │"
"│     │                                                     every repository                                     │     │"
"│     │Details                                                Enter       open the repository                    │     │"
"│     │  ↑↓          move                                                                                        │     │"
"│     │  Space       add to / remove from queue             Deleted branches and stashes can be                  │     │"
"│     │  a           smart-select merged & gone branches    restored with `sloth restore`.                       │     │"
"│     │  A           select every unprotected branch                                                             │     │"
"│     │  v           view diff                                                                                   │     │"
"│     │  Esc         clear this repository's selection                                                           │     │"
"│     │  ← / h       back to repositories                                                                        │     │"
"│     └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘     │"
"└────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────┘"
" Space mark  → details  a smart select  p/c/X prune/gc/deep clean  / filter  s sort  ? help                             "
