src/ui/snapshots/sloth__ui__tests__repos_tab.snap
---
source: src/ui/tests.rs
expression: "render(&mut state, 120, 20)"
---
"sloth v0.2.0  /work · 3 repos · .git 168.0 MB · 1.5 GB reclaimable · 3 cleanable branches                      [Default]"
" 1 Repos │ 2 Branches │ 3 Queue │ 4 Dashboard                                                                           "
"┌ Repositories 3/3 ──────────────────────────────────┐┌ api · github.com/acme/api ─────────────────────────────────────┐"
"│    Repository    Branch       Cln .git     Reclaim ││    Name                Status        Age  ↑↓        Diff       │"
"│[ ] api           main ●         2  48.0 MB 310.0 MB││[-] main                default         1d                      │"
"│[ ] docs          main           ·                  ││[ ] feat/login          stale merged   3mo    ↑0 ↓12            │"
"│[ ] web           main           1 120.0 MB   1.2 GB││[ ] wip/cache           local !         2d     ↑3 ↓0     +120 -4│"
"│                                                    ││[ ] fix/typo            stale squashe  6mo    ↑2 ↓30            │"
"│                                                    ││[ ] stash WIP on main:                 40d                      │"
"│                                                    ││[-] worktree api [main] main                                    │"
"│                                                    ││[ ] worktree api-hotfix dirty                            12.0 MB│"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"└────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────┘"
" x clean  q quit │ Space mark  → details  a smart select  p/c/X prune/gc/deep clean  / filter  s sort  ? help           "
